# robotics_assign_2

./: CMakeLists.txt  block_speller.py  cartesian_move.py  contributors.txt  finger_move.py  ghetto_spell.py  mainpage.dox  manifest.xml  package.xml  pickup_block.py  vision.rviz
launch/: all.launch  arm.launch  extract_blocks.launch  filter.launch  vision.launch  vision.rviz
msg/: Block.msg  HsvFilter.msg
opencv/: block_detector.py  capture.py  classify_blocks.py  color_detect.py  colour_filter.py  create_knn.py  image_saver.py  working_area_extraction.py
srv/: Cartesian.srv  Finger.srv  Pickup.srv
